# face_classification

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  environment.yaml  link_model.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  locus_tests.yaml  pre_commit.yaml  stage_model.yaml  tests.yaml
cloudbuild/: api_cloudbuild.yaml  cloudbuild.yaml  config_cpu.yaml  evaluate_cloudbuild.yaml  train_cloudbuild.yaml  vertex_ai_train.yaml
configs/: config_cpu.yaml  default_config.yaml  prometheus_config.txt  sweep.yaml
configs/evaluate/: evaluate_config.yaml
configs/model/: model_config.yaml
configs/train/: train_config.yaml
configs/urls/: urls_config.yaml
data/: .gitignore  processed.dvc  raw.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: .gitignore  checkpoints.dvc
reports/: .gitignore  README.md  profiles_logs.dvc
src/face_classification/: api.py  client.py  data.py  data_statistics.py  evaluate.py  frontend.py  metric_tracker.py  model.py  train.py  utils.py  visualize.py
src/web_app/: api.py  frontend.py
tests/: test_data.py  test_model.py
tests/integrationstests/: test_api.py
tests/integrationtests/: test_api.py
tests/performancetests/: locustfile.py  test_model.py
tests/unittests/: test_data.py  test_model.py
