[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "face_classification"
version = "0.0.1"
description = "Face classification model"
authors = [
  { name = "Group_28", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "D101"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "src.face_classification.train:main"
evaluate = "src.face_classification.evaluate:main"
